prevent yieldmo divs from overlapping our content

--- a/assets/css/sports-theme.css
+++ b/assets/css/sports-theme.css
@@ -1113,6 +1113,8 @@ article.post {
     position: relative;
     float: left;
     margin-top: 20px; }
+  article.post .ym {
+    overflow: hidden; }
 
 .single #div-gpt-atf-leaderboard, .single #div-gpt-mobile-leaderboard {
   margin-bottom: 0px; }
